--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ SERVER_PORT="9981"
 CORS_ORIGINS=["*"]
 # 其他配置
 DEBUG="False"
+
+# 数据库配置
+DATABASE_URL="sqlite+aiosqlite:///test.db"
+DATABASE_POOL_SIZE="20"
